--- a/common_preamble.tex
+++ b/common_preamble.tex
@@ -23,6 +23,8 @@
 
 \documentclass[UTF8, 12pt]{article}
 
+\usepackage[left=2cm, right=2cm, top=2cm, bottom=2cm]{geometry}
+
 \usepackage{graphicx} % Allows including images
 \usepackage{pst-func}
 \usepackage{float}
