Updates from Overleaf

--- a/content/class-1.tex
+++ b/content/class-1.tex
@@ -37,7 +37,7 @@ $$\begin{pmatrix} 2 \\ 7 \\ 16 \\ 29 \end{pmatrix} = \begin{pmatrix} 1 & 1 & 1 \
 $$\begin{pmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \\ 0 & 0 & 1 \end{pmatrix} \begin{pmatrix} a \\ b \\ c \end{pmatrix} = \begin{pmatrix} 1 \\ -1 \\ 2 \\ 2 \end{pmatrix}$$
 得$(a,b,c) = (1,-1,2)$, 即$y = 1 - x + 2x^2$。
 
-\vspace{2em}
+\newpageorvspace
 
 {\bf 习题1.2 第4题} 在实数范围内解线性方程组
 $$\begin{cases}
@@ -63,7 +63,7 @@ $$\begin{pmatrix}[ccc|c]
 \end{pmatrix}$$
 所以解集为$(x,y,z) = (19t-23,-7t+9,t)$, $t\in\mathbb{R}$. 它在3维空间中的图像$\Pi$是一条直线。将这个方程组的常数项全部变成0，得到的方程组的解集在3维空间中的图像$\Pi_0$一条过原点的直线。$\Pi_0$与$\Pi$之间可以通过平移相互得到，即$\Pi = \Pi_0 + \begin{pmatrix} -23 \\ 9 \\ 0 \end{pmatrix}$，$\begin{pmatrix} -23 \\ 9 \\ 0 \end{pmatrix}$可以换为原非齐次线性方程组的任意一个特解。
 
-\vspace{2em}
+\newpageorvspace
 
 {\bf 习题1.3 第2题} 讨论当$\lambda$取什么值时下面的方程组有解
 $$\begin{cases}
@@ -141,7 +141,7 @@ linsolve(
 \end{lstlisting}
 \end{center}
 
-\vspace{2em}
+\newpageorvspace
 
 {\bf 习题四} 设齐次线性方程组(I), (II)的系数矩阵分别为
 $$A = \begin{pmatrix} a_{11} & \cdots & a_{1n} \\ \vdots & \ddots & \vdots \\ a_{s1} & \cdots & a_{sn} \end{pmatrix}, \quad B = \begin{pmatrix} b_{11} & \cdots & b_{1n} \\ \vdots & \ddots & \vdots \\ b_{\ell 1} & \cdots & b_{\ell n} \end{pmatrix}$$
@@ -156,7 +156,7 @@ $$C(A) = \operatorname{span}\{a_1, \cdots, a_s\} = \operatorname{span}\{b_1, \cd
 所以相应的零空间，即解空间相同
 $$N(A) = C(A)^{\perp} = C(B)^{\perp} = N(B)$$
 
-\vspace{2em}
+\newpageorvspace
 
 {\bf 习题1.1 第2题} (1). 求证：如果复数集合的子集$P$包含至少一个非零数，并且对加、减、乘、除（除数不为$0$）封闭，则$P$包含$0,1$，从而是数域。
 
