--- a/content/class-1.tex
+++ b/content/class-1.tex
@@ -130,7 +130,7 @@ $$
 $$
 \end{itemize}
 
-可以用程序验证答案：
+可以用程序验证答案（在$\mathbb{Q}(\lambda)$中的解，适合一般情况，不适合$\lambda = 1,-2$这样的退化的情况）：
 \begin{center}
 \begin{lstlisting}[language=Python]
 import sympy as sp
@@ -149,11 +149,19 @@ linsolve(
 $$A = \begin{pmatrix} a_{11} & \cdots & a_{1n} \\ \vdots & \ddots & \vdots \\ a_{s1} & \cdots & a_{sn} \end{pmatrix}, \quad B = \begin{pmatrix} b_{11} & \cdots & b_{1n} \\ \vdots & \ddots & \vdots \\ b_{\ell 1} & \cdots & b_{\ell n} \end{pmatrix}$$
 若$A$与$B$的行等价，判断(I)与(II)是否等价，并证明你的结论。
 
-{\bf 解}：若$A$与$B$的行等价，那么矩阵$P_{\ell\times s}$，使得$P_{\ell\times s}A = B$，同时存在矩阵$Q_{s\times \ell}$，使得$Q_{s\times \ell}B = A$。设$x$满足$Ax = 0$，那么
+{\bf 解}：解法一：容易看出齐次线性方程组
+$$Ax = 0 \quad \text{与} \quad \begin{pmatrix} A \\ \mathbf{0}_{\ell\times n} \end{pmatrix} x = 0$$
+同解，其中$\mathbf{0}_{\ell\times n}$为$\ell\times n$的零矩阵。因为$A$与$B$的行等价，故可通过行的初等变换将
+$$\begin{pmatrix} A \\ \mathbf{0}_{\ell\times n} \end{pmatrix} x = 0 \quad \text{化为} \quad \begin{pmatrix} A \\ B \end{pmatrix} x = 0$$
+于是，齐次线性方程组
+$$Ax = 0 \quad \text{与} \quad \begin{pmatrix} A \\ B \end{pmatrix} x = 0$$
+同解。所以齐次线性方程组(II) $Bx = 0$的解集（解空间）是齐次线性方程组(I) $Ax = 0$的子集（子空间）。同理可以证明齐次线性方程组(I) $Ax = 0$的解集（解空间）是齐次线性方程组(II) $Bx = 0$的子集（子空间）。故二者相同，即齐次线性方程组(I)与(II)等价。
+
+解法二：若$A$与$B$的行等价，那么矩阵$P_{\ell\times s}$，使得$P_{\ell\times s}A = B$，同时存在矩阵$Q_{s\times \ell}$，使得$Q_{s\times \ell}B = A$。设$x$满足$Ax = 0$，那么
 $Bx = P_{\ell\times s}Ax = P_{\ell\times s}\cdot 0 = 0$。反过来，若$x$满足$Bx = 0$，那么
 $Ax = Q_{s\times \ell}Bx = Q_{s\times \ell}\cdot 0 = 0$。所以齐次线性方程组(I), (II)同解，即是等价的。
 
-将$A$记作$\begin{pmatrix} a_1 \\ \vdots \\ a_s \end{pmatrix}$，将$B$记作$\begin{pmatrix} b_1 \\ \vdots \\ b_{\ell} \end{pmatrix}$，这里的$a_i, b_j$为$n$维行向量。$A$与$B$的行等价即为$A$与$B$的行空间相同，即
+解法三：将$A$记作$\begin{pmatrix} a_1 \\ \vdots \\ a_s \end{pmatrix}$，将$B$记作$\begin{pmatrix} b_1 \\ \vdots \\ b_{\ell} \end{pmatrix}$，这里的$a_i, b_j$为$n$维行向量。$A$与$B$的行等价即为$A$与$B$的行空间相同，即
 $$C(A) = \operatorname{span}\{a_1, \cdots, a_s\} = \operatorname{span}\{b_1, \cdots, b_{\ell}\} = C(B)$$
 所以相应的零空间，即解空间相同
 $$N(A) = C(A)^{\perp} = C(B)^{\perp} = N(B)$$
@@ -185,7 +193,63 @@ $$N(A) = C(A)^{\perp} = C(B)^{\perp} = N(B)$$
 (4). 包含$\sqrt[3]{2}$的最小的数域为
 $$\mathbb{Q}(\sqrt[3]{2}) = \{ a + b\sqrt[3]{2} + c\sqrt[3]{4} \ |\ a,b,c\in\mathbb{Q} \}$$
 
-很容易看到任何包含$\sqrt[3]{2}$的数域都必须包含$\sqrt[3]{2}, \sqrt[3]{4}$，从而包含$\mathbb{Q}(\sqrt[3]{2})$，那么只要证明$\mathbb{Q}(\sqrt[3]{2})$是一个数域。设$m(x) = x^3 - 2$，这是$\sqrt[3]{2}$的所谓的（首一的, monic）极小多项式\footnote{使得满足$f(\sqrt[3]{2})=0$的$\mathbb{Q}$系数多项式中次数最低的，如果要求是首一的，即最高次项系数为1，则这样的多项式是唯一的。}(minimal polynomial over $\mathbb{Q}$)。令$F = \mathbb{Q}[x] / (m(x))$为$\mathbb{Q}$系数多项式全体的等价类组成的集合，其中的等价关系为
+很容易看到任何包含$\sqrt[3]{2}$的数域都必须包含$\sqrt[3]{2}, \sqrt[3]{4}$，从而包含$\mathbb{Q}(\sqrt[3]{2})$，那么只要证明$\mathbb{Q}(\sqrt[3]{2})$是一个数域。
+
+解法一：直接验证$\mathbb{Q}(\sqrt[3]{2})$是对加、减、乘、除封闭。其中对加、减、乘封闭好验证。对于除法封闭，只要验证$1/(a + b\sqrt[3]{2} + c\sqrt[3]{4}) \in \mathbb{Q}(\sqrt[3]{2})$，$a,b,c$不全为零，即可。不妨设$a,b,c$都不为零（其余情况更简单）。这种情况下，又不妨设$c=1$，记$\theta = \sqrt[3]{2}$，要证明
+$$1/(a + b\theta + \theta^2) \in \mathbb{Q}(\theta)$$
+利用带余除法，有
+$$\theta^3-2 = (\theta^2 + b\theta + a) (\theta-b) + ((b^2-a)\theta + ab-2)$$
+若$b^2-a=0$，则$ab-2\neq 0$，此时有
+$$1/(\theta^2 + b\theta + a) = (\theta-b)/(2-ab).$$
+若$b^2-a\neq 0$，则
+$$(\theta^2 + b\theta + a) = ((b^2-a)\theta + ab-2) \left(\frac{1}{b^2-a}\theta + \frac{b^3 - 2ab + 2}{(b^2-a)^2} \right) + a - (ab-2)\frac{b^3 - 2ab + 2}{(b^2-a)^2}$$
+将上式回代，有
+$$(\theta^3-2) \left(\frac{1}{b^2-a}\theta + \frac{b^3 - 2ab + 2}{(b^2-a)^2} \right) = (\theta^2 + b\theta + a) \left[ (\theta-b) \left(\frac{1}{b^2-a}\theta + \frac{b^3 - 2ab + 2}{(b^2-a)^2} \right) + 1 \right] - \gamma$$
+其中$\gamma = a - (ab-2)\frac{b^3 - 2ab + 2}{(b^2-a)^2}$，只要验证$\gamma\neq 0$，即有
+$$1/(\theta^2 + b\theta + a) = \left[ (\theta-b) \left(\frac{1}{b^2-a}\theta + \frac{b^3 - 2ab + 2}{(b^2-a)^2} \right) + 1 \right] / \gamma$$
+
+% 太麻烦
+% 解法一：直接验证$\mathbb{Q}(\sqrt[3]{2})$是对加、减、乘、除封闭。其中对加、减、乘封闭好验证，对除法封闭可以利用待定系数法，假设（$a_1,b_1,c_1$不全为零；$a_2,b_2,c_2$为未知量）
+% $$\dfrac{1}{a_1 + b_1\sqrt[3]{2} + c_1\sqrt[3]{4}} = a_2 + b_2\sqrt[3]{2} + c_2\sqrt[3]{4}$$
+% 变形为
+% $$1 = (a_1 + b_1\sqrt[3]{2} + c_1\sqrt[3]{4})(a_2 + b_2\sqrt[3]{2} + c_2\sqrt[3]{4})$$
+% 比较$1, \sqrt[3]{2}, \sqrt[3]{4}$的系数，有
+% $$
+% \begin{cases}
+% 1 = a_1a_2 + 2b_1c_2 + 2c_1b_2 \\
+% 0 = a_1b_2 + b_1a_2 + 2c_1c_2 \\
+% 0 = a_1c_2 + c_1a_2 + b_1b_2
+% \end{cases}
+% $$
+% 写成矩阵形式为
+% $$
+% \begin{pmatrix}
+% 1 \\ 0 \\ 0
+% \end{pmatrix}
+% = \begin{pmatrix}
+% a_1 & 2c_1 & 2b_1 \\ b_1 & a_1 & 2c_1 \\ c_1 & b_1 & a_1
+% \end{pmatrix}
+% \begin{pmatrix}
+% a_2 \\ b_2 \\ c_2
+% \end{pmatrix}
+% $$
+% 若$a_2\neq0$，则增广矩阵有
+% \begin{align*}
+% \begin{pmatrix}[ccc|c]
+% a_1 & 2c_1 & 2b_1 & 1 \\ b_1 & a_1 & 2c_1 & 0 \\ c_1 & b_1 & a_1 & 0
+% \end{pmatrix}
+% \to \begin{pmatrix}[ccc|c]
+% 1 & 2c_1/a_1 & 2b_1/a_1 & 1/a_1 \\ 0 & a_1^2-2b_1c_1 & 2a_1c_1-2b_1^2 & -b_1 \\ 0 & a_1b_1-2c_1^2 & a_1^2-2c_1b_1 & -c_1
+% \end{pmatrix}
+% \end{align*}
+% $a_1^2-2b_1c_1$, $a_1b_1-2c_1^2$不能同时为零，否则有$b_1 \neq 0, c_1 \neq 0, 2c_1^3 = b_1^3$，在$\mathbb{Q}$中不可能成立。若$a_1^2-2b_1c_1\neq 0$，则上述增广矩阵能化为
+% $$\begin{pmatrix}[ccc|c]
+% 1 & 2c_1/a_1 & 2b_1/a_1 & 1/a_1 \\ 0 & 1 & (2a_1c_1-2b_1^2)/(a_1^2-2b_1c_1) & -b_1/(a_1^2-2b_1c_1) \\ 0 & 0 & (a_1^2-2b_1c_1)^2 - (2a_1c_1-2b_1^2)(a_1b_1-2c_1^2) & -c_1(a_1^2-2b_1c_1) + b_1(a_1b_1-2c_1^2)
+% \end{pmatrix}$$
+
+解法二：
+
+设$m(x) = x^3 - 2$，这是$\sqrt[3]{2}$的所谓的（首一的, monic）极小多项式\footnote{使得满足$f(\sqrt[3]{2})=0$的$\mathbb{Q}$系数多项式中次数最低的，如果要求是首一的，即最高次项系数为1，则这样的多项式是唯一的。}(minimal polynomial over $\mathbb{Q}$)。令$F = \mathbb{Q}[x] / (m(x))$为$\mathbb{Q}$系数多项式全体的等价类组成的集合，其中的等价关系为
 $$f_1(x) \sim f_2(x) \quad \Longleftrightarrow \quad \exists g(x) \ s.t.\ f_1(x)-f_2(x) = g(x)m(x)$$
 作为一个$\mathbb{Q}$线性空间，$F$的一组基可以取作$1, \overline{x}, \overline{x}^2$。这是因为对于任意一个$f(x) \in \mathbb{Q}[x]$，都存在$g(x), r(x)$，$\deg r(x) < \deg m(x)$，使得
 $$f(x) = g(x)m(x) + r(x)$$
