update assignment 1 and 2

--- a/main.tex
+++ b/main.tex
@@ -2,11 +2,23 @@
 
 \input{common_preamble}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 习题课
+
+% \title{2021秋高等代数习题课}
+
+% \input{content/class-1}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\title{2021秋高等代数习题课}
-% \author{WEN Hao}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 课后作业
 
-\input{content/class-1}
+\title{2021秋高等代数课后习题}
 
+\input{assignments/assignment-1}
+% \input{assignments/assignment-2}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
