--- a/assignments/assingment-4.tex
+++ b/assignments/assingment-4.tex
@@ -7,8 +7,34 @@
 \maketitle
 
 
-{\bf 习题2.3 第1,2,3,4(2),5题}
+{\bf 习题2.3 第1题}
 
-{\bf 习题2.4 第1,2,3题}
+\newpageorvspace
+
+{\bf 习题2.3 第2题}
+
+\newpageorvspace
+
+{\bf 习题2.3 第3题}
+
+\newpageorvspace
+
+{\bf 习题2.3 第4(2)题}
+
+\newpageorvspace
+
+{\bf 习题2.3 第5题}
+
+\newpageorvspace
+
+{\bf 习题2.4 第1题}
+
+\newpageorvspace
+
+{\bf 习题2.4 第2题}
+
+\newpageorvspace
+
+{\bf 习题2.4 第3题}
 
 \end{document}
