--- a/assignments/assignment-3.tex
+++ b/assignments/assignment-3.tex
@@ -6,7 +6,39 @@
 
 \maketitle
 
+{\bf 习题2.2}
 
-{\bf 习题2.2 第1,2,3,6,7题}
+一般来说，将向量$\alpha_1,\cdots,\alpha_n$排成向量，组成矩阵$A$。求向量组$\{\alpha_1,\cdots,\alpha_n\}$的线性关系，即求齐次线性方程组
+$$0 = Ax = (\alpha_1,\cdots,\alpha_n) \begin{pmatrix} x_{1} \\ \vdots \\ x_{n} \end{pmatrix}$$
+的性质。事实上，如果$\{\alpha_{i_1},\cdots,\alpha_{i_m}\}$线性无关，那么
+$$(\alpha_{i_1},\cdots,\alpha_{i_m}) \begin{pmatrix} x_{i_1} \\ \vdots \\ x_{i_m} \end{pmatrix} = 0$$
+只有零解。于是，只要将$A$通过高斯消元法化为阶梯阵$B = (\beta_1,\cdots,\beta_n)$，将每行第一个非零元对应的列拿到一起，设其下标为$i_1,\cdots,i_m$，那么$\{\alpha_{i_1},\cdots,\alpha_{i_m}\}$就是一个极大线性无关组。这是因为，此时
+$$(\beta_{i_1},\cdots,\beta_{i_m}) = \begin{pmatrix} 1 & & \makebox(0,0){\text{\huge $\ast$}} \\ & \ddots & \\ \makebox(0,0){\text{\huge\bf 0}} & & 1 \\ & & \\ & \makebox(0,0){\text{\huge\bf 0}} & \\ & & \end{pmatrix}$$
+要注意的是改变$\alpha_1,\cdots,\alpha_n$排列次序组成矩阵$A$，可能得到不同的极大线性无关组。
+
+第(1)问，全部四个向量$\alpha_1,\alpha_2,\alpha_3,\alpha_4$组成极大线性无关组。第(2)问的一个线性无关组为$\alpha_1,\alpha_2,\alpha_4$.
+
+\newpageorvspace
+
+{\bf 习题2.2 第2题}
+
+将$\alpha_1,\cdots,\alpha_5$排成向量，组成矩阵$A$（可以顺序不同，但$\alpha_1,\alpha_2$排在前2位），并化为阶梯型
+$$
+A = \begin{pmatrix} 0 & 1 & 3 & 4 & 6 \\ 1 & 2 & 4 & 3 & 5 \\ 2 & 3 & 5 & 2 & 4 \\ 3 & 4 & 6 & 1 & 3 \end{pmatrix} \to
+\begin{pmatrix} 1 & 0 & -2 & -5 & -7 \\ 0 & 1 & 3 & 4 & 6 \\ 0 & 0 & 0 & 0 & 0 \\ 0 & 0 & 0 & 0 & 0 \end{pmatrix}
+$$
+于是$\alpha_1,\alpha_2$线性无关，且式原向量组的一个极大线性无关组，不能再扩充了。
+
+\newpageorvspace
+
+{\bf 习题2.2 第3题}
+
+\newpageorvspace
+
+{\bf 习题2.2 第6题}
+
+\newpageorvspace
+
+{\bf 习题2.2 第7题}
 
 \end{document}
