--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 % \title{2021秋高等代数习题课}
 
 % \input{content/class-1}
+% \input{content/class-2}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -19,6 +20,8 @@
 \title{2021秋高等代数课后习题}
 
 % \input{assignments/assignment-1}
-\input{assignments/assignment-2}
+% \input{assignments/assignment-2}
+\input{assignments/assignment-3}
+% \input{assignments/assignment-4}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
