--- a/assignments/assignment-5.tex
+++ b/assignments/assignment-5.tex
@@ -1,70 +1,10 @@
-
-% \renewcommand{\newpageorvspace}{\newpage}
 \renewcommand{\newpageorvspace}{\vspace{2em}}
 
-\date{2021-09-17  第一次习题课}
+\date{第五次作业}
 
 \begin{document}
 
 \maketitle
-
-{\bf 习题2.5 第4题}
-
-设向量组$S = \{ \alpha_1, \cdots, \alpha_s \}$线性无关，并且可以由向量组$T = \{ \beta_1, \cdots, \beta_t \}$线性表出。求证：
-\begin{itemize}
-\item[(1)] 向量组$T$与$S\cup T$等价。
-\item[(2)] 将$S$扩充为$S\cup T$的一个极大线性无关组$T_1 = \{ \alpha_1, \cdots, \alpha_s, \beta_{i_1}, \cdots, \beta_{i_k} \}$，则$T_1$与$T$等价，且$s+k\leqslant t$。
-\end{itemize}
-
-{\bf 证明：}(1). $T$作为子集，显然可以由$S\cup T$线性表出。任取向量$v\in S\cup T$，若$v\not\in T$，则$v\in S$。由于$S$可以由$T$线性表出，故$v$可以由$T$线性表出。所以由$S\cup T$可以由$T$线性表出。故向量组$T$与$S\cup T$等价。
-
-(2). 容易看出$T_1$可以由向量组$T$线性表出。若$T$不能由$T_1$线性表出，则存在$\beta \in T\setminus T_1$，使得$\beta$不能表示为$T_1$中向量的线性组合。将$\beta$添加到$T_1$中得到$T_1'$，则$T_1'$是线性无关组且元素个数比$T_1$多，这与$T_1$是$S\cup T$的一个极大线性无关组矛盾。所以$T$能由$T_1$线性表出，故二者等价。而且有
-$$s+k = \operatorname{rank}(T_1) = \operatorname{rank}(T) \leqslant \# T = t$$
-
-\newpageorvspace
-
-{\bf 习题2.5 第8题}
-
-设$V$是复数域上的$n$维线性空间。将它看成实数域$\mathbb{R}$上的线性空间$V_{\mathbb{R}}$，对任意$\alpha,\beta\in V_{\mathbb{R}}$按复线性空间$V$中的加法定义$\alpha+\beta$，对$\alpha\in V_{\mathbb{R}}$及实数$\lambda\in\mathbb{R}$按$V$中向量与$\lambda$（看作复数）的乘法定义$\lambda\alpha$。求实线性空间$V_{\mathbb{R}}$的维数，并由复线性空间$V$的一组基求出$V_{\mathbb{R}}$的一组基。
-
-{\bf 解：}设$e_1,\cdots,e_n$为$V$的一组基。令$i=\sqrt{-1}$。那么$ie_1,\cdots,ie_n\in V$。下面证明$E = \{ e_1,ie_1\cdots,e_n,ie_n\}$构成$V_{\mathbb{R}}$的一组基。进而可以知道$V_{\mathbb{R}}$的维数为$2n$.
-\begin{itemize}
-\item $E$在$R$上线性无关：设$\lambda_{11},\lambda_{12},\cdots,\lambda_{n1},\lambda_{n2}\in\mathbb{R}$使得$\lambda_{11}e_1+\lambda_{12}(ie_1)+\cdots+\lambda_{n1}e_n+\lambda_{n2}(ie_n) = 0$，那么$(\lambda_{11}+\lambda_{12}i)e_1+\cdots+(\lambda_{n1}+\lambda_{n2}i)e_n = 0$.由于$e_1,\cdots,e_n$为$V$的一组基，故$\lambda_{11}+\lambda_{12}i=\cdots=\lambda_{n1}+\lambda_{n2}i=0$,从而有$\lambda_{11}=\lambda_{12}=\cdots=\lambda_{n1}=\lambda_{n2}=0$.
-\item $\operatorname{span}_{\mathbb{R}}(E) = V_{\mathbb{R}}$: 任取$\alpha\in V_{\mathbb{R}}$，由于$e_1,\cdots,e_n$为$V$的一组基，故存在$\lambda_{11}+\lambda_{12}i,\cdots,\lambda_{n1}+\lambda_{n2}i\in\mathbb{C}$，使得
-$$\alpha = (\lambda_{11}+\lambda_{12}i)e_1 + \cdots + (\lambda_{n1}+\lambda_{n2}i)e_n = \lambda_{11}e_1+\lambda_{12}(ie_1) + \cdots + \lambda_{n1}e_n+\lambda_{n2}(ie_n)$$
-\end{itemize}
-
-\newpageorvspace
-
-{\bf 习题2.6 第2题}
-
-将副书记何$\mathbb{C}$看成实数域上的线性空间$\mathbb{C}_{\mathbb{R}}$。求$\mathbb{C}_{\mathbb{R}}$与实数域上2维数组空间$\mathbb{R}^2 = \{ (x,y) \ \|\ x,y\in\mathbb{R} \}$之间的同构映射$\sigma$，将$1+i,1-i$分别映到$(1,0), (0,1)$.
-
-{\bf 解：}$\mathbb{C}_{\mathbb{R}}$的一组基可以取为$1,i$ 有$\sigma(a+bi) = a\sigma(1) + b\sigma(i)$，只要确定$\sigma(1), \sigma(i)$的值即可确定同构映射$\sigma$。由
-$$
-\begin{cases}
-\sigma(1+i) = \sigma(1) + \sigma(i) =(1,0) \\
-\sigma(1-i) = \sigma(1) - \sigma(i) =(0,1) \\
-\end{cases}
-$$
-可得$\sigma(1) = \left(\frac{1}{2}, \frac{1}{2}\right), \sigma(1) = \left(\frac{1}{2}, -\frac{1}{2}\right)$. 故
-$$\sigma(a+bi) = a \left( \frac{1}{2}, \frac{1}{2} \right) + b \left( \frac{1}{2}, -\frac{1}{2} \right) = \left( \frac{a+b}{2}, \frac{a-b}{2} \right)$$
-
-\newpageorvspace
-
-{\bf 补充题}. 设$V$为$F$（$F$特征为0）上线性空间，$V_1,\cdots,V_s$是$V$的真子空间，证明
-$$V_1\cup V_2\cup \cdots \cup V_s \subsetneqq V$$
-
-{\bf 证明：}对$s$进行归纳证明。$s=1$时，由于是真子空间，结论平凡成立。假设对$s-1$我们证明了结论。接下来对$s$，我们用反证法证明。假设$V_1\cup V_2\cup \cdots \cup V_s = V$。
-
-不妨设任意$V_i$满足$V_i \subsetneqq \bigcup\limits_{j\neq i} V_j$，否则由归纳假设即能得出矛盾。于是可以取$v\in V_i$, 满足$v\not\in \bigcup\limits_{j\neq i} V_j$。同时任取$u\not\in V_i$（是真子空间）。这样取出来的$u,v$都不是零向量。
-
-考虑集合$S = \mathbb{F}v + u$. 有$S\cap V_i=\emptyset$, 否则能推出$u\in V_i$，与$u$的取法矛盾。由假设$V_1\cup V_2\cup \cdots \cup V_s = V$，那么$S\subseteq \bigcup\limits_{j\neq i} V_j$。与此同时，$S$与每一个$V_j (j\neq i)$的交集至多含有一个元素。因为假设存在$V_j$使得有$\lambda_1v+u, \lambda_2v+u \in V_j\cap S$, $\lambda_1\neq\lambda_2 \in \mathbb{F}$, 由于$V_j$是线性子空间，有$(\lambda_1v+u) - (\lambda_2v+u) = (\lambda_1 - \lambda_2)v \in V_j$，这与$v$的取法矛盾。于是
-$$S = S\cap (\bigcup\limits_{j\neq i} V_j) = \bigcup\limits_{j\neq i} (S \cap V_j)$$
-那么$S = \mathbb{F}v + u$的元素个数即不能超过$s-1$，这与域$\mathbb{F}$是特征为0的域，元素个数无穷多是矛盾的。所以$V_1\cup V_2\cup \cdots \cup V_s = V$的假设不成立。因此，对任意正整数$s$，以及$V$的真子空间$V_1,\cdots,V_s$，都有
-$$V_1\cup V_2\cup \cdots \cup V_s \subsetneqq V。$$
-
-\newpageorvspace
 
 {\bf 习题2.5 第3题}
 
@@ -226,5 +166,8 @@ $$F_n = \left( \frac{\sqrt{5}}{10} + \frac{1}{2} \right) \left( \dfrac{1+\sqrt{5
 $$\sigma(x) = \sigma(x\cdot 1) = x \circ \sigma(1) = x \circ a = a^{x} = \sigma_a(x)$$
 所以$\sigma_a, a\in\mathbb{R}^{+} \setminus {1}$即是$\mathbb{R} \to \mathbb{R}^{+}$的所有线性同构映射。
 
+\newpageorvspace
+
+To be continued...
 
 \end{document}
