--- a/content/class-2.tex
+++ b/content/class-2.tex
@@ -2,7 +2,7 @@
 % \renewcommand{\newpageorvspace}{\newpage}
 \renewcommand{\newpageorvspace}{\vspace{2em}}
 
-\date{2021-09-17  第一次习题课}
+\date{2021-10-15  第二次习题课}
 
 \begin{document}
 
