--- a/main.tex
+++ b/main.tex
@@ -5,10 +5,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 习题课
 
-% \title{2021秋高等代数习题课}
+\title{2021秋高等代数习题课}
 
 % \input{content/class-1}
-% \input{content/class-2}
+\input{content/class-2}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -17,12 +17,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 课后作业
 
-\title{2021秋高等代数课后习题}
+% \title{2021秋高等代数课后习题}
 
 % \input{assignments/assignment-1}
 % \input{assignments/assignment-2}
 % \input{assignments/assignment-3}
 % \input{assignments/assignment-4}
-\input{assignments/assignment-5}
+% \input{assignments/assignment-5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
