Updates from Overleaf

--- a/content/class-2.tex
+++ b/content/class-2.tex
@@ -38,7 +38,7 @@ $$\alpha = (\lambda_{11}+\lambda_{12}i)e_1 + \cdots + (\lambda_{n1}+\lambda_{n2}
 
 {\bf 习题2.6 第2题}
 
-将副书记何$\mathbb{C}$看成实数域上的线性空间$\mathbb{C}_{\mathbb{R}}$。求$\mathbb{C}_{\mathbb{R}}$与实数域上2维数组空间$\mathbb{R}^2 = \{ (x,y) \ \|\ x,y\in\mathbb{R} \}$之间的同构映射$\sigma$，将$1+i,1-i$分别映到$(1,0), (0,1)$.
+将复数集合$\mathbb{C}$看成实数域上的线性空间$\mathbb{C}_{\mathbb{R}}$。求$\mathbb{C}_{\mathbb{R}}$与实数域上2维数组空间$\mathbb{R}^2 = \{ (x,y) \ \|\ x,y\in\mathbb{R} \}$之间的同构映射$\sigma$，将$1+i,1-i$分别映到$(1,0), (0,1)$.
 
 {\bf 解：}$\mathbb{C}_{\mathbb{R}}$的一组基可以取为$1,i$ 有$\sigma(a+bi) = a\sigma(1) + b\sigma(i)$，只要确定$\sigma(1), \sigma(i)$的值即可确定同构映射$\sigma$。由
 $$
