--- a/main.tex
+++ b/main.tex
@@ -24,5 +24,6 @@
 % \input{assignments/assignment-3}
 % \input{assignments/assignment-4}
 % \input{assignments/assignment-5}
+% \input{assignments/assignment-6}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
