init the latest assignment and course note

--- a/assignments/assignment-6.tex
+++ b/assignments/assignment-6.tex
@@ -18,4 +18,16 @@
 
 \newpageorvspace
 
+{\bf 习题3.1 第2题}
+
+\newpageorvspace
+
+{\bf 习题3.1 第3题}
+
+\newpageorvspace
+
+{\bf 习题3.1 第5题}
+
+\newpageorvspace
+
 \end{document}
