finish course note for class 3

--- a/assignments/assignment-6.tex
+++ b/assignments/assignment-6.tex
@@ -1,12 +1,17 @@
 \renewcommand{\newpageorvspace}{\vspace{2em}}
 
-\date{第刘次作业}
+\date{第六次作业}
 
 \begin{document}
 
 \maketitle
 
 {\bf 习题2.8 第1题}
+
+利用过$A,B$点的一般的圆方程
+$$\lambda (x^2+y^2-x+2y-10) + (x^2+y^2+3x-4y-1) = 0$$
+令其过点$C = (2,0)$，解出$\lambda = 9/8$。再代入上述方程得
+$$x^2+y^2+\dfrac{15}{17}x-\dfrac{14}{17}y-\dfrac{98}{17}=0$$
 
 \newpageorvspace
 
