--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 
 % \input{content/class-1}
 % \input{content/class-2}
-% \input{content/class-3}
+\input{content/class-3}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -24,7 +24,7 @@
 % \input{assignments/assignment-2}
 % \input{assignments/assignment-3}
 % \input{assignments/assignment-4}
-\input{assignments/assignment-5}
+% \input{assignments/assignment-5}
 % \input{assignments/assignment-6}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
