--- a/assignments/assignment-6.tex
+++ b/assignments/assignment-6.tex
@@ -17,21 +17,53 @@ $$x^2+y^2+\dfrac{15}{17}x-\dfrac{14}{17}y-\dfrac{98}{17}=0$$
 
 {\bf 习题2.8 第2题}
 
+由$x^2 = 5x - 6$解得$x = 2,3$。于是，$a_n = \alpha 2^n + \beta3^n$。利用$a_1=a_2=1$的条件解得$\alpha = 1, \beta = -1/3$。所以有
+$$a_n = 2^n - 3^{n-1}$$
+
 \newpageorvspace
 
 {\bf 习题2.8 第3题}
 
+一般给定$n$个点$(x_1,y_1),\cdots,(x_n,y_n)$，$x_1,\cdots,x_n$互不相同，则有拉格朗日插值多项式
+\begin{align*}
+& L(x) = \sum_{i=1}^{n}y_{i}\ell_{i}(x) \\
+\text{其中，} & \ell_{i}(x) = \prod_{\begin{smallmatrix}1\leq m\leq k\\m\neq i\end{smallmatrix}}{\frac {x-x_{m}}{x_{i}-x_{m}}}={\frac {(x-x_{0})}{(x_{i}-x_{0})}}\cdots {\frac {(x-x_{i-1})}{(x_{i}-x_{i-1})}}{\frac {(x-x_{i+1})}{(x_{i}-x_{i+1})}}\cdots {\frac {(x-x_{n})}{(x_{i}-x_{n})}},
+\end{align*}
+满足$L(x_i) = y_i, i=1,\cdots,n$。本题对应的拉格朗日插值多项式为$f(x) = L(x) = \dfrac{1}{2}x^2 - \dfrac{1}{2}x + 1$. 当然也存在更高次多项式满足题目条件。
+
+任取满足题设条件的多项式$f(x)$，考察$g(x) = f(x) - L(x)$。$1,2,3$是$g(x)$的根，于是存在$h(x)$使得
+$$g(x) = f(x) - L(x) = (x-1)(x-2)(x-3) h(x)$$
+于是在$\mathbb{R}[X]$中有
+$$f(x) \equiv L(x) \mod (x-1)(x-2)(x-3)$$
+观察两边最高次项知上式不可能成立。
+
 \newpageorvspace
 
-{\bf 习题3.1 第2题}
+{\bf 习题3.1 第2题}(1)
+
+$$\tau(n(n-1)\cdots 21) = (n-1) + \cdots + 1 = \dfrac{n(n-1)}{2}$$
+于是$n(n-1)\cdots 21$是偶排列，当且仅当$n(n-1)\equiv 0 \mod 4$，即$n\equiv 0,1 \mod 4$
 
 \newpageorvspace
 
 {\bf 习题3.1 第3题}
 
+令$A$为每个位置元素值都为$1$的$n$阶方阵，那么
+$$0 = det(A) = \text{偶排列个数} - \text{奇排列个数}$$
+所以$\text{偶排列个数} = \text{奇排列个数} = \dfrac{\text{全体排列个数}}{2} = \dfrac{n!}{2}$
+
 \newpageorvspace
 
 {\bf 习题3.1 第5题}
+
+$x^4$的项：由于后3列只有一个$x$，于是必须选择$(2,2)$, $(3,3)$, $(4,4)$位的$x$，剩余只能选择$(1,1)$位的$x$。于是$x^4$的项为$x^4$。
+
+$x^3$的项：由于后3列只有一个$x$，如果都选择相应位置的$x$，剩余只能选择$(1,1)$位的$x$，那么会得到$x^4$。于是后3列只能选取2个$x$，以下是可行的组合：
+\begin{itemize}
+    \item $(2,2)$, $(3,3)$, $(4,1)$选取$x$，相应的项为$(-1)^{\tau(4231)}3x^3$.
+    \item $(3,3)$, $(4,4)$, $(2,1)$选取$x$，相应的项为$(-1)^{\tau(2134)}x^3$.
+\end{itemize}
+于是$x^3$的项为$-3x^3-x^3 = -4x^3$。
 
 \newpageorvspace
 
