--- a/content/class-3.tex
+++ b/content/class-3.tex
@@ -2,7 +2,7 @@
 % \renewcommand{\newpageorvspace}{\newpage}
 \renewcommand{\newpageorvspace}{\vspace{2em}}
 
-\date{2021-10-29  第二次习题课}
+\date{2021-10-29  第三次习题课}
 
 \begin{document}
 
