--- a/main.tex
+++ b/main.tex
@@ -5,11 +5,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 习题课
 
-\title{2021秋高等代数习题课}
+% \title{2021秋高等代数习题课}
 
 % \input{content/class-1}
 % \input{content/class-2}
-\input{content/class-3}
+% \input{content/class-3}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -25,6 +25,6 @@
 % \input{assignments/assignment-3}
 % \input{assignments/assignment-4}
 % \input{assignments/assignment-5}
-% \input{assignments/assignment-6}
+\input{assignments/assignment-6}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
