--- a/main.tex
+++ b/main.tex
@@ -5,11 +5,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 习题课
 
-% \title{2021秋高等代数习题课}
+\title{2021秋高等代数习题课}
 
 % \input{content/class-1}
 % \input{content/class-2}
-% \input{content/class-3}
+\input{content/class-3}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -18,13 +18,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 课后作业
 
-\title{2021秋高等代数课后习题}
+% \title{2021秋高等代数课后习题}
 
 % \input{assignments/assignment-1}
 % \input{assignments/assignment-2}
 % \input{assignments/assignment-3}
 % \input{assignments/assignment-4}
 % \input{assignments/assignment-5}
-\input{assignments/assignment-6}
+% \input{assignments/assignment-6}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
