--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 % \input{content/class-1}
 % \input{content/class-2}
 \input{content/class-3}
+% \input{content/class-4}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -26,5 +27,6 @@
 % \input{assignments/assignment-4}
 % \input{assignments/assignment-5}
 % \input{assignments/assignment-6}
+% \input{assignments/assignment-7}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
